WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20562
WebKitCSSTransformValue.idl operation types don't match the implementation
https://bugs.webkit.org/show_bug.cgi?id=20562
Summary
WebKitCSSTransformValue.idl operation types don't match the implementation
Simon Fraser (smfr)
Reported
2008-08-28 15:38:19 PDT
WebKitCSSTransformValue has a number of issues: 1. the OperationType consts don't match the implementation 2. The order of operations is weird (tho it does need to match the spec) 3. getPropertyCSSValue('-webkit-transform') doesn't return a WebKitCSSTransformValue, but a CSSValueList
Attachments
Patch, testcase, changelog
(9.50 KB, patch)
2008-08-28 15:41 PDT
,
Simon Fraser (smfr)
hyatt
: review-
Details
Formatted Diff
Diff
Fixed patch, testcase
(12.47 KB, patch)
2008-08-28 15:51 PDT
,
Simon Fraser (smfr)
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2008-08-28 15:41:02 PDT
Created
attachment 23061
[details]
Patch, testcase, changelog
Simon Fraser (smfr)
Comment 2
2008-08-28 15:43:29 PDT
Gonna remove this too: // Note there are gaps because the proposed specification // has other types that are not implemented yet
Dave Hyatt
Comment 3
2008-08-28 15:44:48 PDT
Comment on
attachment 23061
[details]
Patch, testcase, changelog Please do scaleX and not scalex to match the spec (same for the other ops).
Simon Fraser (smfr)
Comment 4
2008-08-28 15:51:43 PDT
Created
attachment 23062
[details]
Fixed patch, testcase
Dave Hyatt
Comment 5
2008-08-28 15:52:16 PDT
Comment on
attachment 23062
[details]
Fixed patch, testcase r=me
Simon Fraser (smfr)
Comment 6
2008-08-28 16:04:30 PDT
Committed
r35983
M WebCore/bindings/js/JSCSSValueCustom.cpp M WebCore/ChangeLog M WebCore/css/CSSValue.h M WebCore/css/WebKitCSSTransformValue.h M WebCore/css/WebKitCSSTransformValue.idl M WebCore/css/WebKitCSSTransformValue.cpp M LayoutTests/ChangeLog A LayoutTests/css3/transform-value-types-expected.txt A LayoutTests/css3/transform-value-types.html
r35983
= 8f30d02092e53e5ffb672f82d88b04e0ad86cdbc (trunk)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug