2008-08-28  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dave Hyatt

        Various WebKitCSSTransformValue-related fixes
        https://bugs.webkit.org/show_bug.cgi?id=20562

        Test: css3/transform-value-types.html

        * bindings/js/JSCSSValueCustom.cpp:
        (WebCore::toJS):
        * css/CSSValue.h:
        * css/WebKitCSSTransformValue.cpp:
        (WebCore::WebKitCSSTransformValue::cssText):
        * css/WebKitCSSTransformValue.h:
        (WebCore::WebKitCSSTransformValue::):
        * css/WebKitCSSTransformValue.idl:


Canonical link: https://commits.webkit.org/28386@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35983 268f45cc-cd09-0410-ab3c-d52691b4dbfc