WebCore/css/CSSValue.h
@@ -54,6 +54,7 @@ public:
     virtual bool isPrimitiveValue() const { return false; }
     virtual bool isTimingFunctionValue() const { return false; }
     virtual bool isValueList() const { return false; }
+    virtual bool isWebKitCSSTransformValue() const { return false; }
 
 #if ENABLE(SVG)
     virtual bool isSVGColor() const { return false; }
